alignments and bug fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
-
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400;500&display=swap');
 
 * {
@@ -56,6 +50,7 @@ html {
 
 body {
   font-size: 1.6rem;
+  max-width: 100vw;
 }
 
 
