--- a/components/Teams/teams.css
+++ b/components/Teams/teams.css
@@ -166,16 +166,70 @@ body {
   }
 }
 
-@media (min-width: 500px) and (max-width: 768px) {
+@media (min-width: 250px) and (max-width: 768px) {
   .coumnBox {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .carousel.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
+  }
+  .carousel.dragging .card {
+    cursor: grab;
+    user-select: none;
+  }
+  .carousel :where(.card, .img) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .carousel .card {
+    scroll-snap-align: start;
+    height: 215px;
+    list-style: none;
+    background: #fff;
+    cursor: pointer;
+    padding-bottom: 15px;
+    flex-direction: column;
+    border-radius: 8px;
+  }
+  .carousel .card .img {
+    background: red;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .card .img img {
+    width: 95px;
+    height: 95px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #fff;
+    margin: 0;
+    padding: 0;
+  }
+  .carousel .card h2 {
+    font-weight: 500;
+    font-size: 1.56rem;
+    margin: 30px 0 5px;
+  }
+  .carousel .card span {
+    color: #6A6D78;
+    font-size: 1.31rem;
+  }
+  
 }
 
 @media (min-width: 768px) and (max-width: 3024px) {
   .coumnBox {
     grid-template-columns: repeat(3, 1fr);
-  }}
+  }
+}
+
 
 li {
   border-block-end-style:none
